[feat]: spu添加页面